# research

./: .gitignore  README.md
3tau-modal-locking/: 3tau_modal_locking_whitepaper.py  README.md  prior_art_search_report.md
_project-template/: CITATION.cff  QC_CHECKLIST.md  README.md
cashmir/: README.md  README_2.md  hypothesis.md  main.py  main_2.py
dynamical_symmetry_breaking/: README.md  dynamical_symmetry_breaking.py  legendre_thermodynamics_whitepaper.py  requirements.txt  run_legendre_whitepaper.sh  run_whitepaper.sh
em-gw-priming-window/: README.md  supporting-evidence.md
fragility_index/: README.md
gaussian-hill-surface/: .gitignore  .zenodo.json  CITATION.cff  LICENSE  PLAN.md  PhaseWall_Developer_Note_v2.1.md  PhaseWall_Sandbox_Playbook_v2.1.md  QC_CHECKLIST.md  README.md  peer_review_chatgpt.md  peer_review_claude.md  peer_review_grok.md  phasewall-boost-tech-spec.md
gradient-z-classifier/: FALSIFIED.md  technical_note_1.md  technical_note_2.md  technical_note_3.md
gray-scott-replication-signaling-chaos/: CONJECTURE.md  MORE.md  README.md  gray_scott_replication_peclet_technical_note_final.docx
palindromic-square/: .gitignore  (+18 more)
phasewall-poc-app/: .gitignore  README.md  USER_GUIDE.md  app.py  pyproject.toml  whitepaper.md
phasewall-poc-app/phasewall_poc/: __init__.py  config.py  geometry.py  metrics.py  phasewall.py  reporting.py  run_bench.py  run_demo.py  sim_optimizers.py  sim_walkers.py
phasewall-poc-app/scripts/: capture_ui_screenshots.py
phasewall-poc-app/tests/: test_benchmark_pipeline.py  test_phasewall_math.py  test_simulations.py
(+348 files in other folders)
