[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phasewall-poc-app"
version = "0.1.0"
description = "Standalone PoC app for the Gaussian 1-sigma phase-wall insight"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PhaseWall Research" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "plotly>=5.20",
  "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["phasewall_poc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
